--- a/localhost/View/index.html
+++ b/localhost/View/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>这是首页</h1>
-    <p><a href="../Control/userCheck.php">查看用户</a></p>
+    <p><a href="../Control/userCheck.php?nc=">查看用户</a></p>
     
 </body>
 </html>
