--- a/localhost/View/login.html
+++ b/localhost/View/login.html
@@ -47,7 +47,7 @@
                 password:$("#pwd").val()
             },function(data,status){
                 //console.log(data+" "+status);
-                if(status == "success"){
+                if(status == "success"&&data==200){
                     alert("登陆成功");
                     window.location.href="index.html";
                     $("#name").val("");
